# bazel-toolchains-explained

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  default.nix  fake.nix  post-commit.hook.sh
examples/: BUILD.bazel
nix/: sources.json
rules_cc/: BUILD.bazel  hello.cpp
rules_iron/: BUILD.bazel  defs.bzl
rules_iron/private/: BUILD.bazel  iron-binary-pre-compile.c  iron-binary-pre-compile.sh  iron_binary_v0.bzl
